test/tests/compiler/18_structures/valid/import_and_use/plx1_use_all.plx
use `assert`
use `ctype`
use `errno`
use `locale`
use `math`
use `signal`
use `stdio`
use `stdlib`
use `string`
use `time`

pub fn main(none) i32 {
    return 0
}
