test/tests/compiler/18_structures/invalid_parse/struct_decl_missing_end_semicolon.plx
type struc s # a structure declaration must end with a semicolon

pub fn main(none) i32 {
    return 0
}
